--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.0.1",
+    "@material-tailwind/react": "^2.0.6",
+    "@mui/material": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -45,6 +46,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-modal-sheet": "^2.0.0",
     "react-otp-field": "^3.0.1",
+    "react-otp-input": "^3.0.2",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
