--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^0.2.0",
     "framer-motion": "^10.12.18",
     "i18next": "^22.4.15",
+    "immer": "^10.0.2",
     "lucide-react": "^0.259.0",
     "next": "^13.4.12",
     "next-auth": "^4.22.1",
