--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.6",
-    "@mui/material": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -45,7 +44,6 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-modal-sheet": "^2.0.0",
     "react-otp-field": "^3.0.1",
     "react-otp-input": "^3.0.2",
     "react-phone-input-2": "^2.15.1",
@@ -53,6 +51,7 @@
     "react-redux": "^8.0.5",
     "react-scroll": "^1.8.9",
     "react-slider": "^2.0.5",
+    "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
     "react-window": "^1.8.9",
